sass/calendar.scss
:root {
	--border-width: 0.5mm;
}

@font-face {
	font-style: normal;
	font-weight: 100 900;
	src: url("calendar/fonts/inter.woff2") format("woff2");
	font-family: "Inter";
	font-display: swap;
}

@font-face {
	font-style: normal;
	font-weight: 300;
	src: url("calendar/fonts/univers.woff2") format("woff2");
	font-family: "Univers";
	font-display: swap;
}

body {
	background: white;
	color: black;
	font-size: 5mm;
	font-family: "Inter", var(--font-system-ui);
	white-space: nowrap;

	&>a {
		display: none;
	}

	@media screen {
		margin: 10mm auto;
		width: min(var(--container-width), 90%);

		&>a {
			display: inline;
		}
	}
}

#calendar-header {
	display: flex;
	justify-content: center;
	align-items: flex-start;
	gap: 5mm;
	margin-top: 3mm;
	margin-bottom: -5mm;
	line-height: 1;
	font-family: "Univers", var(--font-industrial);

	#month-number {
		font-size: 68mm;
	}

	#secondary-column {
		display: flex;
		flex-direction: column;
		font-size: 30mm;
		line-height: 0.95;
	}
}

#calendar-footer {
	display: flex;
	flex-direction: column;

	#year-progress {
		flex: 1;

		#progress-bar-wrapper {
			flex: 1;
			margin-top: 3mm;
			border-top: var(--border-width) solid black;
			border-bottom: var(--border-width) solid black;
			padding: 1mm 0;
		}

		#progress-bar {
			--mask: linear-gradient(to right, black, black var(--year-percentage), transparent var(--year-percentage), transparent);
			-webkit-mask-image: var(--mask);
			-webkit-print-color-adjust: exact;
			mask-image: var(--mask);
			cursor: help;
			background-image: repeating-linear-gradient(to right,
					black,
					black 0.5mm,
					white 0.5mm,
					white 1mm);
			width: 100%;
			height: 5mm;
			print-color-adjust: exact;
		}
	}

	#column {
		display: flex;
		flex-direction: row;
		justify-content: space-between;

		div:nth-of-type(1) {
			display: flex;
			flex-direction: column;
			justify-content: space-between;

			img {
				margin: 0;
				aspect-ratio: 598 / 152;
				width: 38.835mm;
			}
		}

		div:nth-of-type(2) {
			display: grid;
			grid-template-rows: repeat(2, 1fr);
			grid-template-columns: repeat(5, 1fr);
			grid-template-areas:
				". . . . ."
				". . . . .";
			grid-auto-flow: row;
			gap: 1mm;
			margin-top: 3mm;
			width: fit-content;
			height: fit-content;
			// margin-left: auto;

			label {
				-webkit-print-color-adjust: exact;
				opacity: 0.25;
				transition: var(--transition);
				cursor: pointer;
				background-size: cover;
				aspect-ratio: 1 / 1;
				width: 13.560mm;
				print-color-adjust: exact;
			}

			input:checked+label {
				opacity: 1;
			}

			input:focus-visible+label {
				animation: focus-in var(--transition);
				outline: 0.125rem solid var(--accent-color);
				outline-offset: 0.125rem;
			}

			@supports not selector(:focus-visible) {
				input:focus+label {
					animation: focus-in var(--transition);
					outline: 0.125rem solid var(--accent-color);
					outline-offset: 0.125rem;
				}
			}

			#cube-dispenser+label {
				background-image: url("calendar/chamber-icons/cube-dispenser.png");
			}

			#cube-hazard+label {
				background-image: url("calendar/chamber-icons/cube-hazard.png");
			}

			#pellet-hazard+label {
				background-image: url("calendar/chamber-icons/pellet-hazard.png");
			}

			#pellet-catcher+label {
				background-image: url("calendar/chamber-icons/pellet-catcher.png");
			}

			#water-hazard+label {
				background-image: url("calendar/chamber-icons/water-hazard.png");
			}

			#fling-enter+label {
				background-image: url("calendar/chamber-icons/fling-enter.png");
			}

			#fling-exit+label {
				background-image: url("calendar/chamber-icons/fling-exit.png");
			}

			#turret-hazard+label {
				background-image: url("calendar/chamber-icons/turret-hazard.png");
			}

			#dirty-water+label {
				background-image: url("calendar/chamber-icons/dirty-water.png");
			}

			#cake+label {
				background-image: url("calendar/chamber-icons/cake.png");
			}
		}
	}
}

.CalendarJS {
	margin: 0;
	padding: 0;
}

.cjs-calHeader {
	margin: 0;
	padding: 0 0 3mm 0 !important;
	width: 100%;

	@media print {
		display: none;
	}
}

.cjs-right {
	box-sizing: border-box;
}

.cjs-top {
	box-sizing: border-box;
}

.cjs-left {
	box-sizing: border-box;
	border-left: var(--border-width) solid black;

	&:first-of-type {
		border-left: none;
	}
}

.cjs-bottom {
	box-sizing: border-box;
	border-bottom: var(--border-width) solid black;
}

.cjs-dayCol {
	position: relative;
	float: left;
	/* = width for a 1:1 aspect ratio */
	margin: 0;
	padding: 0% 0% calc(100% / 7) 0%;
	width: calc(100% / 7);
	overflow: hidden;
	text-align: left;
}

.cjs-dayContent {
	position: absolute;
	margin: 0;
	/*90%; /* = 100% - 2*5% padding */
	padding: 0;
	/* 90%; /* = 100% - 2*5% padding */
	width: calc(100% - 2mm);
	height: calc(100% - 1mm);
}

.cjs-dayHeader {
	margin: 0;
	padding: 0;
	text-align: center;
}

.cjs-dayHeaderCell {
	margin: 0;
	padding: 1mm;
	text-transform: uppercase;
}

.cjs-dayTable {
	display: table;
	margin: 1mm 2mm;
	padding: 0;
	width: calc(100% - 2mm);
	height: calc(100% - 1mm);
}

.cjs-dayCell {
	display: table-cell;
	vertical-align: top;
	margin: 0;
	padding: 0;
}

.cjs-lastLink,
.cjs-nextLink {
	margin: 0;
	border: none;
	background: none;
	padding: 0;
	width: 50%;
	font-weight: bold;
	font-size: 5mm;
	font-family: inherit;

	&:hover {
		background: none;
	}
}

.cjs-lastLink {
	float: left;
	text-align: start;
}

.cjs-nextLink {
	float: right;
	text-align: end;
}

.cjs-clearfix {
	clear: both;
	margin: calc(var(--border-width) / 2 * -1) 0;
	border: 0;
	padding: calc(var(--border-width) / 4);
	width: 0;
	height: 0;
}

.cjs-moTitle {
	margin: 0;
	padding: 0;
	font-weight: bold;
	text-align: center;
}

.cjs-lastLink:hover,
.cjs-nextLink:hover {
	cursor: pointer;
}

.cjs-dateLabel {
	margin: 0;
	padding: 0;
}

.cjs-weekRow {
	position: relative;
	margin: 0;
	border: 0;
	padding: 0;

	&:last-of-type .cjs-bottom {
		border-bottom: none;
	}
}

